Homework 6 was added + comment

--- a/lesson6/homework6_nlp.ipynb
+++ b/lesson6/homework6_nlp.ipynb
@@ -1863,7 +1863,7 @@
     {
       "cell_type": "code",
       "source": [
-        "####################### Task 2"
+        "####################### "
       ],
       "metadata": {
         "id": "HOm6pb8buqzv"
@@ -3585,7 +3585,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Лематизируем тексты\n"
+        "# Лематизируем тексты ##### Task 2\n"
       ],
       "metadata": {
         "id": "ox_g19G5aVD4"
